--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/1598/1598196.png" />
+  <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/1598/1598431.png" />
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200&family=Varela+Round&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500&family=Work+Sans:wght@100;200;300&display=swap"
+    rel="stylesheet">
+  <title>Green Friends</title>
 </head>
+
 <body>
   <header>
-    <img src="img/Logo-Green-Friends.png" alt="logotipo" id="logoGF">
-    <img src="img/image (1).png" alt="user-icon" id="user-icon">
+    <img src="img/logo-final.png" alt="logotipo" id="logoGF">
+    <img src="img/users.png" alt="user-icon" id="user-icon">
   </header>
   <main>
+
     <section id="first-page">
       <div class="banner">
-        <p class="banner-welcome">Cuidar de la naturaleza es 
+        <p class="banner-welcome">Cuidar de la naturaleza es
           cuidar de nosotros.</p>
         <img src="img/mundo.png" alt="word-hands" id="mundo">
       </div>
@@ -30,49 +35,56 @@
         <img src="img/step3-heart.png" alt="love-word">
       </div>
     </section>
+
     <section id="form-register">
       <form id="register-form">
-        <label id="title-form"><h2>REGISTRO</h2></label>
-        <label for="user-name">Nombre de usuario</label>
-        <input type="text" id="user-name">
-        <label for="email">Correo electronico</label>
-        <input type="email" id="user-email">
-        <label for="password">Contraseña</label>
-        <input type="password" id="user-password">
-        <button id="form-button">Enviar</button>
+        <h2 id="title-form">Registro</h2>
+        <div class="form">
+          <label for="user-name">Nombre de usuario</label>
+          <input type="text" id="user-name">
+          <label for="email">Correo electronico</label>
+          <input type="email" id="user-email">
+          <label for="password">Contraseña</label>
+          <input type="password" id="user-password">
+          <label for="confirm-password">Contraseña</label>
+          <input type="confirm-password" id="confirm-password">
+          <button id="form-button">Enviar</button>
+        </div>
       </form>
     </section>
+
   </main>
-<footer></footer>
+  <footer></footer>
 
 
 
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+  <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-analytics.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyAkNdxq3vmaFtbmmT1grzUMxp0rwwpgW9A",
-    authDomain: "red-social-ee6aa.firebaseapp.com",
-    databaseURL: "https://red-social-ee6aa-default-rtdb.firebaseio.com",
-    projectId: "red-social-ee6aa",
-    storageBucket: "red-social-ee6aa.appspot.com",
-    messagingSenderId: "98006263640",
-    appId: "1:98006263640:web:c49709e798416c48a6272d",
-    measurementId: "G-VQ3NQNZDJ0"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAkNdxq3vmaFtbmmT1grzUMxp0rwwpgW9A",
+      authDomain: "red-social-ee6aa.firebaseapp.com",
+      databaseURL: "https://red-social-ee6aa-default-rtdb.firebaseio.com",
+      projectId: "red-social-ee6aa",
+      storageBucket: "red-social-ee6aa.appspot.com",
+      messagingSenderId: "98006263640",
+      appId: "1:98006263640:web:c49709e798416c48a6272d",
+      measurementId: "G-VQ3NQNZDJ0"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
   <script type="module" src="main.js"></script>
 </body>
+
 </html>
