--- a/src/index.html
+++ b/src/index.html
@@ -37,20 +37,25 @@
     </section>
 
     <section id="form-register">
-      <form id="register-form">
-        <h2 id="title-form">Registro</h2>
-        <div class="form">
-          <label for="user-name">Nombre de usuario</label>
-          <input type="text" id="user-name">
-          <label for="email">Correo electronico</label>
-          <input type="email" id="user-email">
-          <label for="password">Contraseña</label>
-          <input type="password" id="user-password">
-          <label for="confirm-password">Contraseña</label>
-          <input type="confirm-password" id="confirm-password">
-          <button id="form-button">Enviar</button>
-        </div>
-      </form>
+      <div id="formDiv">
+        <form id="register-form">
+          <h2 id="title-form">Registro</h2>
+          <div class="form">
+            <label for="user-name">Nombre de usuario</label>
+            <input type="text" id="user-name">
+            <label for="email">Correo electronico</label>
+            <input type="email" id="user-email">
+            <label for="password">Contraseña</label>
+            <input type="password" id="user-password">
+            <label for="confirm-password">Contraseña</label>
+            <input type="confirm-password" id="confirm-password">
+            <button id="form-button">Enviar</button>
+          </div>
+        </form>
+      </div>
+      <div class="imgForm">
+        <img src="" alt="">
+      </div>
     </section>
 
   </main>
