--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         <img src="img/mundo.png" alt="word-hands" id="mundo">
       </div>
       <div class="process">
-        <h2 id="title-process"></h2>
+        <h2 id="title-process">como</h2>
         <img src="img/step1-register.png" alt="register">
         <img src="img/step2-idea.png" alt="idea">
         <img src="img/step3-heart.png" alt="love-word">
@@ -37,22 +37,20 @@
     </section>
 
     <section id="form-register">
-      <div id="formDiv">
-        <form id="register-form">
-          <h2 id="title-form">Registro</h2>
-          <div class="form">
-            <label for="user-name">Nombre de usuario</label>
-            <input type="text" id="user-name">
-            <label for="email">Correo electronico</label>
-            <input type="email" id="user-email">
-            <label for="password">Contraseña</label>
-            <input type="password" id="user-password">
-            <label for="confirm-password">Contraseña</label>
-            <input type="confirm-password" id="confirm-password">
-            <button id="form-button">Enviar</button>
-          </div>
-        </form>
-      </div>
+      <form id="register-form">
+        <h2 id="title-form">Registro</h2>
+        <div class="form">
+          <label for="user-name">Nombre de usuario</label>
+          <input type="text" id="user-name">
+          <label for="email">Correo electronico</label>
+          <input type="email" id="user-email">
+          <label for="password">Contraseña</label>
+          <input type="password" id="user-password">
+          <label for="confirm-password">Contraseña</label>
+          <input type="confirm-password" id="confirm-password">
+          <button id="form-button">Enviar</button>
+        </div>
+      </form>
       <div class="imgForm">
         <img src="" alt="">
       </div>
