creación de la página de bienvenida con css y html, se agregaron imágenes a la carpeta

--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,25 @@
       <div class="banner">
         <p class="banner-welcome">Cuidar de la naturaleza es
           cuidar de nosotros.</p>
-        <img src="img/mundo.png" alt="word-hands" id="mundo">
+        <button class="btn-login">¡Regístrate!</button>
       </div>
       <div class="process">
-        <h2 id="title-process">como</h2>
-        <img src="img/step1-register.png" alt="register">
-        <img src="img/step2-idea.png" alt="idea">
-        <img src="img/step3-heart.png" alt="love-word">
+        <h2 id="title-process">¿COMO FUNCIONA?</h2>
+        <div class="process-icon">
+          <img src="img/line1.png" alt="register">
+          <p class="process-p">Regístrate</p>
+        </div>
+        <img class="process-arrow" src="img/flecha.png" alt="flecha">
+        <div class="process-icon">
+          <img src="img/line2.png" alt="idea">
+          <p class="process-p">Comparte y aprende</p>
+        </div>
+        <img class="process-arrow" src="img/flecha.png" alt="flecha">
+        <div class="process-icon">
+          <img src="img/line3.png" alt="love-word">
+          <p class="process-p">Salvemos al planeta</p>
+        </div>
+
       </div>
     </section>
 
@@ -57,7 +69,10 @@
     </section>
 
   </main>
-  <footer></footer>
+  <footer>
+    <img src="img/footer.png" alt="logo-footer">
+    <p>By Diana, Piña & Estefany - Laboratoria 011 Mex</p>
+  </footer>
 
 
 
