--- a/src/index.html
+++ b/src/index.html
@@ -59,13 +59,13 @@
           <input type="email" id="user-email">
           <label for="password">Contraseña</label>
           <input type="password" id="user-password">
-          <label for="confirm-password">Contraseña</label>
+          <label for="confirm-password">Confirmar contraseña</label>
           <input type="confirm-password" id="confirm-password">
           <button id="form-button">Enviar</button>
         </div>
       </form>
       <div class="imgForm">
-        <img src="" alt="">
+        <img src="img/madreTierra.png" alt="MadreTierra">
       </div>
     </section>
 
