--- a/src/index.html
+++ b/src/index.html
@@ -22,27 +22,20 @@
   </header>
   <main>
 
-    <section id="first-page">
+    <div id="root" >
+      
+    </div>
+
+    <section id="home-page">
       <div class="banner">
         <p class="banner-welcome">Cuidar de la naturaleza es
           cuidar de nosotros.</p>
         <button class="btn-login">¡Regístrate!</button>
       </div>
       <div class="process">
-        <h2 id="title-process">¿COMO FUNCIONA?</h2>
-        <div class="process-icon">
-          <img src="img/line1.png" alt="register">
-          <p class="process-p">Regístrate</p>
-        </div>
-        <img class="process-arrow" src="img/flecha.png" alt="flecha">
-        <div class="process-icon">
-          <img src="img/line2.png" alt="idea">
-          <p class="process-p">Comparte y aprende</p>
-        </div>
-        <img class="process-arrow" src="img/flecha.png" alt="flecha">
-        <div class="process-icon">
-          <img src="img/line3.png" alt="love-word">
-          <p class="process-p">Salvemos al planeta</p>
+        <h2 id="title-process">¿Cómo Funciona?</h2>
+        <div class="process-img">
+          <img id="process-movil" src="img/process-movil.png" alt="register">
         </div>
 
       </div>
@@ -50,7 +43,7 @@
 
     <section id="form-register">
       <form id="register-form">
-        <h2 id="title-form">Registro</h2>
+        <h2 class="titles" id="title-form">Registro</h2>
         <div class="form">
           <img class="leaf-img" src="img/leafs-desktop.png" alt="leafs">
           <label for="user-name">Nombre de usuario</label>
@@ -65,7 +58,7 @@
         </div>
       </form>
       <div class="imgForm">
-        <img src="img/madreTierra.png" alt="MadreTierra">
+        <img id="madre-tierra" src="img/madreTierra.png" alt="MadreTierra">
       </div>
     </section>
 
