--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       <img src="img/users.png" alt="user-icon" id="user-icon" />
     </header>
     <main>
-      <div id="root"></div>
+      <div id="root1"></div>
 
       <div id="home-page">
         <div class="banner">
