--- a/src/index.html
+++ b/src/index.html
@@ -22,84 +22,45 @@
   <body>
     <header>
       <img src="img/logo-final.png" alt="logotipo" id="logoGF" />
-      <img src="img/users.png" alt="user-icon" id="user-icon" />
+      <ul>
+        <li><a href="#"><button class="blue" id="btn-register" value='/register'>¡Regístrate!</button></a></li>
+        <li><a href="#"><button class="blue">Login</button></a></li>
+      </ul>
     </header>
-    <main>
-      <div id="root1"></div>
-
-      <div id="home-page">
-        <div class="banner">
-          <p class="banner-welcome">
-            Cuidar de la naturaleza es cuidar de nosotros.
-          </p>
-          <button class="btns-login">¡Regístrate!</button>
-        </div>
-        <div class="process">
-          <h2 id="title-process">¿Cómo Funciona?</h2>
-          <div class="process-img">
-            <img
-              id="process-movil"
-              src="img/process-movil.png"
-              alt="register"
-            />
-          </div>
-        </div>
-      </div>
-
-      <div id="register-page">
-        <form id="register-form">
-          <div class="form">
-            <h2 class="titles" id="title-form">Registro</h2>
-            <img class="leaf-img" src="img/leafs-desktop.png" alt="leafs" />
-            <label for="user-name">Nombre de usuario</label>
-            <input type="text" id="user-name" />
-            <label for="email">Correo electronico</label>
-            <input type="email" id="user-email" />
-            <label for="password">Contraseña</label>
-            <input type="password" id="user-password" />
-            <label for="confirm-password">Confirmar contraseña</label>
-            <input type="confirm-password" id="confirm-password" />
-            <button id="form-button">Enviar</button>
-          </div>
-        </form>
-        <div class="img-register-desktop">
-          <img id="madre-tierra" src="img/madreTierra.png" alt="MadreTierra" />
-        </div>
-      </div>
-    </main>
+    <div id="root"></div>
     <footer>
       <img src="img/footer.png" alt="logo-footer" />
       <p>By Diana, Piña & Estefany - Laboratoria 011 Mex</p>
     </footer>
-
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
-
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
-
-    <script>
-      // Your web app's Firebase configuration
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      var firebaseConfig = {
-        apiKey: "AIzaSyAkNdxq3vmaFtbmmT1grzUMxp0rwwpgW9A",
-        authDomain: "red-social-ee6aa.firebaseapp.com",
-        databaseURL: "https://red-social-ee6aa-default-rtdb.firebaseio.com",
-        projectId: "red-social-ee6aa",
-        storageBucket: "red-social-ee6aa.appspot.com",
-        messagingSenderId: "98006263640",
-        appId: "1:98006263640:web:c49709e798416c48a6272d",
-        measurementId: "G-VQ3NQNZDJ0",
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-    </script>
-    <script type="module" src="main.js"></script>
   </body>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAkNdxq3vmaFtbmmT1grzUMxp0rwwpgW9A",
+      authDomain: "red-social-ee6aa.firebaseapp.com",
+      databaseURL: "https://red-social-ee6aa-default-rtdb.firebaseio.com",
+      projectId: "red-social-ee6aa",
+      storageBucket: "red-social-ee6aa.appspot.com",
+      messagingSenderId: "98006263640",
+      appId: "1:98006263640:web:c49709e798416c48a6272d",
+      measurementId: "G-VQ3NQNZDJ0",
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+  <script type="module" src="main.js"></script>
 </html>
