mostrar y ocultar imagenes en movil y desktop

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
 
 <body>
   <header>
-    <a href="/"><img src="img/logo-final.png" alt="logotipo" id="logoGF" /></a>
+    <a href="/"><img src="img/logo-desktop.png" alt="logotipo" id="logoGF" /></a>
+    <span class="menu-icon" id="users-icon"><img src="img/users.png" alt=""></span>
     <ul>
       <li><a><button class="blue btn-routing" value='/register'>¡Regístrate!</button></a></li>
       <li><a><button class="blue btn-routing" value='/login'>Login</button></a></li>
