Se agregó boton burguer para mostrar botones de registro y login

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,14 @@
 <body>
   <header>
     <a href="/"><img src="img/logo-desktop.png" alt="logotipo" id="logoGF" /></a>
-    <span class="menu-icon" id="users-icon"><img src="img/users.png" alt=""></span>
-    <ul>
-      <li><a><button class="blue btn-routing" value='/register'>¡Regístrate!</button></a></li>
-      <li><a><button class="blue btn-routing" value='/login'>Login</button></a></li>
-    </ul>
+    <span class="menu-icon" id="users-icon"><img id="img-users" src="img/users.png" alt=""></span>
+
+    <div class="div-navegation">
+      <ul id="navegacion">
+        <li><a><button class="blue btn-routing" value='/register'>¡Regístrate!</button></a></li>
+        <li><a><button class="blue btn-routing" value='/login'>Login</button></a></li>
+      </ul>
+    </div>
   </header>
   <main id="root"></main>
   <footer>
