--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
 
     <div class="div-navegation">
       <ul id="navegacion">
-        <li><a><button class="blue btn-routing" value='/register'>¡Regístrate!</button></a></li>
-        <li><a><button class="blue btn-routing" value='/login'>Login</button></a></li>
+        <li><a><button class="blue btn-routing" id="btn-register" value='/register'>¡Regístrate!</button></a></li>
+        <li><a><button class="blue btn-routing" id="btn-login" value='/login'>Login</button></a></li>
       </ul>
     </div>
   </header>
@@ -44,6 +44,7 @@
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
 
 <script>
@@ -62,6 +63,7 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
+  const auth = firebase.auth();
 </script>
 <script type="module" src="main.js"></script>
 
