--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
       </ul>
     </div>
   </header>
+  
   <main id="root"></main>
   <footer>
     <img src="img/footer.png" alt="logo-footer" />
@@ -58,7 +59,7 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   //firebase.analytics();
-  //const auth = firebase.auth();
+  const auth = firebase.auth();
 </script>
 <script type="module" src="main.js"></script>
 </body>
