--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="icon" type="image/png" href="https://image.flaticon.com/icons/png/512/1598/1598431.png" />
+  <link rel="icon" type="image/png" href="./img/footer.png" />
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,41 +27,41 @@
       </ul>
     </div>
   </header>
-  
+
   <main id="root"></main>
   <footer>
     <img src="img/footer.png" alt="logo-footer" />
     <p>By Diana, Piña & Estefany - Laboratoria 011 Mex</p>
   </footer>
 
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+  <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
 
-<!--<script src="https://www.gstatic.com/firebasejs/init.js"></script>-->
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyAkNdxq3vmaFtbmmT1grzUMxp0rwwpgW9A",
-    authDomain: "red-social-ee6aa.firebaseapp.com",
-    databaseURL: "https://red-social-ee6aa-default-rtdb.firebaseio.com",
-    projectId: "red-social-ee6aa",
-    storageBucket: "red-social-ee6aa.appspot.com",
-    messagingSenderId: "98006263640",
-    appId: "1:98006263640:web:c49709e798416c48a6272d",
-    measurementId: "G-VQ3NQNZDJ0",
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  //firebase.analytics();
-  const auth = firebase.auth();
-</script>
-<script type="module" src="main.js"></script>
+  <!--<script src="https://www.gstatic.com/firebasejs/init.js"></script>-->
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAkNdxq3vmaFtbmmT1grzUMxp0rwwpgW9A",
+      authDomain: "red-social-ee6aa.firebaseapp.com",
+      databaseURL: "https://red-social-ee6aa-default-rtdb.firebaseio.com",
+      projectId: "red-social-ee6aa",
+      storageBucket: "red-social-ee6aa.appspot.com",
+      messagingSenderId: "98006263640",
+      appId: "1:98006263640:web:c49709e798416c48a6272d",
+      measurementId: "G-VQ3NQNZDJ0",
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    //firebase.analytics();
+    const auth = firebase.auth();
+  </script>
+  <script type="module" src="main.js"></script>
 </body>
 
 
