--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500&family=Work+Sans:wght@100;200;300&display=swap"
     rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/38b1cf9511.js" crossorigin="anonymous"></script>
   <title>Green Friends</title>
 </head>
 
