--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     </div>
   </header>
 
-  <main id="root"></main>
+  <div id="root"></div>
   <footer>
     <img src="img/footer.png" alt="logo-footer" />
     <p>By Diana, Piña & Estefany - Laboratoria 011 Mex</p>
