--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500&family=Work+Sans:wght@100;200;300&display=swap"
     rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/38b1cf9511.js" crossorigin="anonymous"></script>
   <title>Green Friends</title>
 </head>
 
 <body>
- 
+
   <div id="root"></div>
   <footer>
     <img src="img/footer.png" alt="logo-footer" />
