--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500&family=Work+Sans:wght@100;200;300&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500&family=Work+Sans:wght@100;200;300;550&display=swap"
     rel="stylesheet" />
   <script src="https://kit.fontawesome.com/38b1cf9511.js" crossorigin="anonymous"></script>
   <title>Green Friends</title>
