--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,24 @@
   <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
 
   <!--<script src="https://www.gstatic.com/firebasejs/init.js"></script>-->
- 
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAkNdxq3vmaFtbmmT1grzUMxp0rwwpgW9A",
+      authDomain: "red-social-ee6aa.firebaseapp.com",
+      databaseURL: "https://red-social-ee6aa-default-rtdb.firebaseio.com",
+      projectId: "red-social-ee6aa",
+      storageBucket: "red-social-ee6aa.appspot.com",
+      messagingSenderId: "98006263640",
+      appId: "1:98006263640:web:c49709e798416c48a6272d",
+      measurementId: "G-VQ3NQNZDJ0",
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    //firebase.analytics();
+    const auth = firebase.auth();
+  </script>
   <script type="module" src="main.js"></script>
 </body>
 
